[workspace]
resolver = "2"
members = [
    "runtimes/wasm",
    "runtimes/ebpf", 
    "runtimes/python",
    "runtimes/shared",
    "runtimes/napi-bridge",
]

[workspace.package]
version = "0.1.0"
authors = ["Samuel Joseph Troyer <sam@rizome.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.5"
cranelift-codegen = "0.103"
cranelift-entity = "0.103"
cranelift-wasm = "0.103"
crossbeam = "0.8"
libc = "0.2"
memmap2 = "0.9"
nats = "0.24"
once_cell = "1.19"
parking_lot = "0.12"
pin-project = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
wasmtime = "16.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
