[package]
name = "python-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# PyO3 for high-performance Python integration
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py39"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# WASM Python runtime for sandboxing
wasmtime = { version = "26.0", features = ["async", "cranelift"], optional = true }
wasmtime-wasi = { version = "26.0", optional = true }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Memory management
parking_lot = "0.12"
dashmap = "5.5"

# Performance monitoring
metrics = "0.23"

# Security
seccomp = { version = "0.1", optional = true }
nix = { version = "0.27", optional = true }

# Text processing
regex = "1.10"

# Additional dependencies
libc = "0.2"

[lib]
name = "python_runtime"
crate-type = ["cdylib", "rlib"]

[features]
default = ["pyo3", "wasm", "security"]
pyo3 = ["dep:pyo3", "dep:pyo3-asyncio"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
security = ["dep:seccomp", "dep:nix"]