[package]
name = "wasm-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
next-rc-shared = { path = "../shared" }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-entity = { workspace = true }
cranelift-wasm = { workspace = true }
crossbeam = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }
wat = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "startup"
harness = false